--- a/codefest/public/index.html
+++ b/codefest/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="./Farmer.webp">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -10,7 +11,7 @@
     />
    
    
-    <title> Codefest</title>
+    <title>Codefest</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
